# ensc351

./: as1-capture.txt
assignment1/: CMakeLists.txt
assignment1/app/: CMakeLists.txt
assignment1/app/src/: main.c
assignment1/hal/include/hal/: builtin_led.h  mcp3204.h  mcp320x.h
assignment1/hal/src/: builtin_led.c  mcp3204.c  mcp320x.c
assignment2/: Cargo.toml  build.sh
assignment2/src/: encoder.rs  main.rs  mcp320x.rs  pwm.rs  sampler.rs
assignment2/src/hal/: encoder.rs  mcp320x.rs  mod.rs  pwm.rs
assignment3/: Cargo.toml  build.sh
assignment3/server/public/: index.html
assignment3/server/public/javascripts/: beatbox_ui.js
assignment3/src/: command.rs  main.rs  sampler.rs  server.rs  udp.rs  units.rs
assignment3/src/hal/: button.rs  encoder.rs  mcp320x.rs  mod.rs
assignment3/src/input/: accelerometer.rs  drumkit.rs  encoder.rs  joystick.rs  mod.rs
assignment3/src/sound/: mod.rs  playback.rs  score.rs
